[package]
name = "lv2rs"
version = "0.3.0"
authors = ["Janonard <janonard@protonmail.com>"]
license = "ISC"
readme = "README.md"
repository = "https://github.com/Janonard/lv2rs"
exclude = [".vscode/*", "*.json"]
description = "Rust re-implementation of the LV2 libraries"
edition = "2018"

[dependencies]
lv2rs-core = { path = "core" }
lv2rs-urid = { path = "urid" }
lv2rs-atom = { path = "atom" }
lv2rs-midi = { path = "midi" }

[workspace]
members = [
    "atom",
    "core",
    "midi",
    "urid",
    "samples/amp",
    "samples/midigate",
]