[package]
name = "lv2rs"
version = "0.3.0"
authors = ["Janonard <janonard@protonmail.com>"]
license = "ISC"
readme = "README.md"
repository = "https://github.com/Janonard/lv2rs"
exclude = [".vscode/*", "*.json", ".travis.yml", "CODE_OF_CONDUCT.md"]
description = "Rust library for the creation of LV2 plugins"
edition = "2018"

[dependencies]
lv2rs-core = "0.3.0"
lv2rs-urid = "0.2.0"
lv2rs-atom = "0.1.0"
lv2rs-midi = "0.1.0"

[workspace]
members = [
    "atom",
    "core",
    "midi",
    "urid",
]

[patch.crates-io]
lv2rs-atom = { path = "atom" }
lv2rs-core = { path = "core" }
lv2rs-midi = { path = "midi" }
lv2rs-urid = { path = "urid" }

[badges]
travis-ci = { repository = "Janonard/lv2rs", branch = "master" }
maintenance = { status = "actively-developed" }