[package]
name = "lv2rs-atom"
version = "0.1.1"
authors = ["Janonard <janonard@protonmail.com>"]
license = "ISC"
readme = "README.md"
repository = "https://github.com/Janonard/lv2rs"
description = "Rust adaptation prototype of the atom type system for LV2"
edition = "2018"

[dependencies]
lv2rs-urid = "0.2.0"

[badges]
travis-ci = { repository = "Janonard/lv2rs", branch = "master" }
maintenance = { status = "actively-developed" }
