[package]
name = "lv2rs-core"
version = "0.3.2"
authors = ["Janonard <janonard@protonmail.com>"]
license = "ISC"
readme = "README.md"
repository = "https://github.com/Janonard/lv2rs"
description = "Rust adaptation prototype of the LV2 core library"
edition = "2018"

[badges]
travis-ci = { repository = "Janonard/lv2rs", branch = "master" }
maintenance = { status = "deprecated" }