[package]
name = "lv2rs-midi"
version = "0.1.0"
authors = ["Janonard <janonard@protonmail.com>"]
license = "ISC"
readme = "README.md"
repository = "https://github.com/Janonard/lv2rs"
description = "Rust re-implementation of the LV2 midi library"
edition = "2018"

[dependencies]
lv2rs-atom = { path = "../atom" }
lv2rs-urid = { path = "../urid" }
ux = "0.1.3"