[package]
name = "lv2rs-midi"
version = "0.1.2"
authors = ["Janonard <janonard@protonmail.com>"]
license = "ISC"
readme = "README.md"
repository = "https://github.com/Janonard/lv2rs"
description = "MIDI message integration for `lv2rs-atom`"
edition = "2018"

[dependencies]
lv2rs-atom = "0.1.0"
lv2rs-urid = "0.2.0"
ux = "0.1.3"

[badges]
travis-ci = { repository = "Janonard/lv2rs", branch = "master" }
maintenance = { status = "deprecated" }