[package]
name = "lv2rs-urid"
version = "0.2.0"
authors = ["Janonard <janonard@protonmail.com>"]
license = "ISC"
readme = "README.md"
repository = "https://github.com/Janonard/lv2rs"
description = "Rust re-implementation of the LV2 core library"
edition = "2018"

[dependencies]
lv2rs-core = "0.3.0"
