[package]
name = "lv2rs-urid"
version = "0.2.0"
authors = ["Janonard <janonard@protonmail.com>"]
license = "ISC"
readme = "README.md"
repository = "https://github.com/Janonard/lv2rs"
description = "Rust adaptation of the LV2 urid library"
edition = "2018"

[dependencies]
lv2rs-core = { path = "../core" }

[badges]
travis-ci = { repository = "Janonard/lv2rs", branch = "master" }
maintenance = { status = "actively-developed" }